--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Valeriy
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <h1>
+        Valeriy
+    </h1>
+</body>
+</html>
